updated with CSS calc on font size and fixed login button size on small display

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ light blue: #1c5380
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: calc(10px + (16 - 10) * (100vw - 320px) / (1920 - 320));
   margin: 0;
   background-repeat:repeat-x;
   background-image:url('../img/bgtile.png');
@@ -40,8 +40,9 @@ main {
 
 .brand-pic{
   display:inline-block;
+  vertical-align: middle;
   max-width: 350px;
-  min-width: 300px;
+  min-width: 181px;
 }
 
 .content-container {
@@ -60,7 +61,7 @@ main {
   display: block;
   line-height: 1.5em;
   background-image: url('../img/frame.png');
-  background-size: contain;
+  background-size: cover;
   background-position:top;
   background-repeat: no-repeat;
 }
@@ -72,12 +73,12 @@ span {
 .brand-pic-container, .login-container {
   position:relative;
   display:inline-block;
-  vertical-align:top;
+  vertical-align:middle;
 }
 
 .brand-pic-container {
   width:60%;
-  height:80px;
+  /* height:80px; */
 }
 
 .login-container {
@@ -116,10 +117,11 @@ footer {
   border: 1px solid #06365f;
   height: 2.5em;
   line-height: 2.5em;
-  width:100px;
+  min-width:4rem;
   margin-left:auto;
   right:15%;
-  top:15px;
+  top:50%;
+  transform:translateY(-50%);
   position:absolute;
 }
 
@@ -127,6 +129,8 @@ footer {
   display:inline-block;
   vertical-align: middle;
   position:relative;
+  height: calc(12px + (25 - 12) * (100vw - 320) / (1920 - 320));
+  width: calc(10px + (22 - 10) * (100vw - 320) / (1920 - 320));
 }
 
 .store-links {
@@ -138,4 +142,39 @@ footer {
   .hero-pic-container {
     display: none;
   }
+
+  .hero-pic {
+    display: none;
+  }
+
+  main {
+    margin:20px auto 50px auto;
+    width: 100vw;
+    position: relative;
+    height: 100%;
+  }
+
+  .content-container {
+    position:relative;
+    display:block;
+    width:85%;
+    margin:0 auto;
+  }
+
+  footer ul {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .footer-element {
+    display: block;
+    margin: 2px auto;
+  }
+
+  /* .brand-pic-container, .login-container {
+    display:block;
+    margin:0 auto;
+  } */
+  /* I prefer the look using the CSS calc() trick without this stacking... */
 }
